--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
             python -c "from osgeo import gdal"
             gdalinfo --version
+      - name: libgeo and cartopy
+        run: |
+            apt -y install libgeos-dev
+            pip install cartopy
       - name: Install dependencies
         run: |
             pip install -r requirements.txt -r requirements-dev.txt
