--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -33,18 +33,16 @@ jobs:
         run: |
             python -c "from osgeo import gdal"
             gdalinfo --version
-      - name: libgeo and cartopy
+      - name: libgeos and cartopy
         run: |
             sudo apt -y install libgeos-dev
             pip install cartopy
       - name: Install dependencies
         run: |
+#          $CONDA/bin/mamba env update --file environment.yml --name base
             pip install -r requirements.txt -r requirements-dev.txt
             python setup.py install
-#      - name: Install dependencies
-#        run: |
-#          $CONDA/bin/mamba env update --file environment.yml --name base
-#          python setup.py install
+
 #    - name: Lint with flake8
 #      run: |
 #        # add CONDA/bin/ in front of everything
@@ -53,11 +51,12 @@ jobs:
 #        $CONDA/bin/flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
       - name: Generate coverage report
 #        working-directory: ../
         run: |
           pwd
-          python -m pytest -vvv --cov=hapi --cov-report=xml
+          python -m pytest -vvv #--cov=hapi --cov-report=xml
 
 #      - name: Upload coverage to Codecov
 #        uses: codecov/codecov-action@v1
