--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -53,10 +53,11 @@ jobs:
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Generate coverage report
-#        working-directory: ../
+        working-directory: ../
         run: |
           pwd
-          python -m pytest -vvv #--cov=hapi --cov-report=xml
+          ls
+          python -m pytest -vvv --cov=Hapi --cov-report=xml
 
 #      - name: Upload coverage to Codecov
 #        uses: codecov/codecov-action@v1
