--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -53,7 +53,7 @@ jobs:
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Generate coverage report
-        working-directory: ../
+        #working-directory: ../
         run: |
           pwd
           ls
