--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ examples/Hydrodynamic models/test_case/results/USbnd/right_results/*
 examples/Hydrodynamic models/test_case/results/q/New folder/*
 examples/Hydrodynamic models/test_case/results/h/New folder/*
 examples/Hydrodynamic models/test_case/results/USbnd/New folder/*
+tests/mo/*
