--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-digitalearth >=0.1.10
-earth2observe >=0.1.7
-Fiona >=1.8.21
-gdal >=3.5.3
-geopandas >=0.12.2
-geostatista >=0.1.5
-loguru >=0.6.0
-matplotlib >=3.5.3
-cleopatra >=0.2.6
-numpy >=1.23.5
-Oasis-Optimization >=1.0.2
-pandas >=1.4.4
-pathlib >=1.0.1
+numpy >=1.24.1
 pip >=22.3.1
-pyramids-gis >=0.2.11
-serapeum_utils >=0.1.1
 PyYAML >=0.6.0
+pathlib >=1.0.1
+gdal >=3.5.3
+pandas >=1.4.4
+geopandas >=0.12.2
+matplotlib >=3.6.3
+scipy >=1.9.1
+statsmodels >=0.13.2
 rasterio >=1.3.2
 rasterstats >=0.17.0
+Fiona >=1.8.21
+geostatista >=0.1.6
+statista >=0.1.8
+pyramids >=0.3.2
+earth2observe >=0.2.2
+Oasis >=1.0.2
+cleopatra >=0.2.7
+digitalearth >=0.1.11
+serapeum_utils >=0.1.1
+joblib >=1.2.0
+loguru >=0.6.0
 requests >=2.28.1
-scipy >=1.9.1
-statista >=0.1.7
-statista >=0.1.7
-statsmodels >=0.13.2
