--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,14 +3,8 @@ name: hapi
 channels:
   - conda-forge
 dependencies:
-  - python >=3.7.1,<3.10
+  - python >=3.9,<3.11
   - pip >=21.3.1
   - matplotlib >=3.4.2,<3.6.0
-  - pandas >=1.3.2,<1.4.3
-  - geopandas >=0.10.2
-  - pip:
-    #- numpy
-    #- pyproj
-    #- ffmpeg-python
-#   # - hapi-nile
-    #- git+https://github.com/MAfarrag/HAPI.git
+#  - pandas >=1.3.2,<1.4.3
+#  - geopandas >=0.10.2
