--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,85 +1,114 @@
+fail_fast: true
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
-  hooks:
-    - id: end-of-file-fixer
-      name: "[py -  check] validate yaml"
-    - id: trailing-whitespace
-      name: "[file - format] trim trailing whitespace"
-      args: [ --markdown-linebreak-ext=md ]
-    -   id: check-added-large-files
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0
+    hooks:
+      - id: end-of-file-fixer
+        name: "[py -  check] validate yaml"
+      - id: trailing-whitespace
+        name: "[file - format] trim trailing whitespace"
+        args: [ --markdown-linebreak-ext=md ]
+      - id: check-added-large-files
         name: "[file -  check] large file"
         args: [ --maxkb=5000 ]
-    -   id: check-docstring-first
+      - id: check-docstring-first
         name: "[py   -  check] docstring first"
         files: /examples
         types : [file, python ]
-    -   id: check-json
+      - id: check-json
         name: "[json -  check] validate json"
-    -   id: check-merge-conflict
+      - id: check-merge-conflict
         name: "[git  -  check] merge conflict"
-    -   id: debug-statements
+      - id: debug-statements
         name: "[py   -  check] debug statements"
-    -   id: detect-private-key
+      - id: detect-private-key
         name: "[cred -  check] private keys"
-    -   id: fix-encoding-pragma
+      - id: fix-encoding-pragma
         name: "[file - format] coding pragma"
         args: [ --remove ]
-    -   id: mixed-line-ending
+      - id: mixed-line-ending
         name: "[file - format] mixed line ending"
         args: [ --fix=auto ]
-    -   id: pretty-format-json
+      - id: pretty-format-json
         name: "[json - format] pretty json"
         args: [ --autofix,
                 --indent=4,
                 --no-sort-keys ]
-    -   id: requirements-txt-fixer
+      - id: requirements-txt-fixer
         name: "[reqs - format] fix requirements.txt"
-    -   id: check-yaml
+      - id: check-yaml
         name: "[yaml -  check] validate yaml"
-- repo: https://github.com/PyCQA/docformatter
-  rev: v1.4
-  hooks:
-    - id: docformatter
-      name: "[py   - format] docformatter"
-      args: [ -i, --wrap-summaries, "0" ]
+#  - repo: https://github.com/pre-commit/mirrors-isort
+#    rev: v5.10.1
+#    hooks:
+#      - id: isort
+#        name: "[py   - format] isort"
+  - repo: https://github.com/PyCQA/docformatter
+    rev: v1.4
+    hooks:
+      - id: docformatter
+        name: "[py   - format] docformatter"
+        args: [ -i, --wrap-summaries, "0" ]
 
-- repo: https://github.com/PyCQA/pydocstyle
-  rev: 6.1.1
-  hooks:
-    - id: pydocstyle
-      name: "[py   - check] pydocstyle"
-      files: ^Hapi/
+  - repo: https://github.com/PyCQA/pydocstyle
+    rev: 6.1.1
+    hooks:
+      - id: pydocstyle
+        name: "[py   - check] pydocstyle"
+        files: ^Hapi/
 
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.4
-  hooks:
-    - id: flake8
-      name: "[py   - check] flake8"
-      language_version: python3.9
-      exclude: ^(examples/|tests/)
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 4.0.1
+    hooks:
+      - id: flake8
+        name: "[py   - check] flake8"
+        language_version: python3.9
+        exclude: ^(examples/|tests/)
 
-- repo: https://github.com/psf/black
-  rev: 22.8.0
-  hooks:
-    - id: black
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v5.7.0
-  hooks:
-    - id: isort
-      name: "[py   - format] isort"
-- repo: https://github.com/ambv/black
-  rev: 22.8.0
-  hooks:
-    - id: black
-      name: "[py   - format] black"
-      language_version: python3.9
+  #- repo: https://github.com/psf/black
+  #  rev: 22.8.0
+  #  hooks:
+  #    - id: black
+  - repo: https://github.com/ambv/black
+    rev: 22.8.0
+    hooks:
+      - id: black
+        name: "[py   - format] black"
+        language_version: python3.9
+  - repo: https://github.com/lovesegfault/beautysh
+    rev: v6.2.1
+    hooks:
+      - id: beautysh
+        name: "[bash - format] beautysh"
 
-- repo: local
-  hooks:
-    - id: pytest-check
-      name: pytest-check
-      entry: pytest -vvv --cov=Hapi
-      language: system
-      pass_filenames: false
-      always_run: true
+  # pre-commit-shell: Checks shell scripts against shellcheck.
+  - repo: https://github.com/detailyang/pre-commit-shell
+    rev: v1.0.6
+    hooks:
+      - id: shell-lint
+        name: "[bash -   lint] shell-lint"
+
+  - repo: https://github.com/rlindsgaard/pre-commit-commit-msg-hooks
+    rev: 0.1.0
+    hooks:
+      - id: check-description-max-length
+        name: "[bash -   format] check-description-max-length"
+      - id: check-second-line-empty
+        name: "[bash -   format] check-second-line-empty"
+      - id: check-summary-capitalized
+        name: "[bash -   format] check-summary-capitalized"
+      - id: check-summary-imperative
+        name: "[bash -   format] check-summary-imperative"
+      - id: check-summary-max-length
+        name: "[bash -   format] check-summary-max-length"
+      - id: check-summary-punctuation
+        name: "[bash -   format] check-summary-punctuation"
+
+  - repo: local
+    hooks:
+      - id: pytest-check
+        name: pytest-check
+        entry: pytest -vvv --cov=Hapi
+        language: system
+        pass_filenames: false
+        always_run: true
