--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,12 +43,12 @@ repos:
 #    hooks:
 #      - id: isort
 #        name: "[py   - format] isort"
-  - repo: https://github.com/PyCQA/docformatter
-    rev: v1.4
-    hooks:
-      - id: docformatter
-        name: "[py   - format] docformatter"
-        args: [ -i, --wrap-summaries, "0" ]
+#  - repo: https://github.com/PyCQA/docformatter
+#    rev: v1.4
+#    hooks:
+#      - id: docformatter
+#        name: "[py   - format] docformatter"
+#        args: [ -i, --wrap-summaries, "0" ]
 
   - repo: https://github.com/PyCQA/pydocstyle
     rev: 6.1.1
@@ -57,12 +57,12 @@ repos:
         name: "[py   - check] pydocstyle"
         files: ^Hapi/
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 4.0.1
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
     hooks:
       - id: flake8
         name: "[py   - check] flake8"
-        language_version: python3.9
+#        language_version: python3.9
         exclude: ^(examples/|tests/)
 
   #- repo: https://github.com/psf/black
@@ -74,7 +74,7 @@ repos:
     hooks:
       - id: black
         name: "[py   - format] black"
-        language_version: python3.9
+#        language_version: python3.9
   - repo: https://github.com/lovesegfault/beautysh
     rev: v6.2.1
     hooks:
@@ -108,7 +108,7 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        entry: pytest -vvv --cov=Hapi
+        entry: pytest -vvv --cov=statista
         language: system
         pass_filenames: false
         always_run: true
