--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
 dependencies:
   - python >=3.9,<3.11
   - numpy >=1.24.1
+  - hpc >=0.1.0
   - pip >=22.3.1
   - PyYAML >=0.6.0
   - pathlib >=1.0.1
@@ -14,11 +15,8 @@ dependencies:
   - statsmodels >=0.13.2
   - rasterio >=1.3.2
   - rasterstats >=0.17.0
-  - Fiona >=1.8.21
-  - geostatista >=0.1.6
-  - statista >=0.2.0
-  - pyramids >=0.3.2
-  - earth2observe >=0.2.2
+#  - statista >=0.3.0
+  - pyramids >=0.4.0
   - Oasis >=1.0.2
   - cleopatra >=0.2.7
   - digitalearth >=0.1.11
@@ -26,5 +24,5 @@ dependencies:
   - joblib >=1.2.0
   - loguru >=0.6.0
   - requests >=2.28.1
-  - pytest >=7.2.1
-  - pytest-cov ==4.0.0
+  - pytest
+  - pytest-cov
