--- a/environment.yml
+++ b/environment.yml
@@ -1,28 +1,27 @@
 channels:
   - conda-forge
 dependencies:
-  - python >=3.9,<3.11
-  - numpy >=1.24.1
-  - hpc >=0.1.0
-  - pip >=22.3.1
-  - PyYAML >=0.6.0
+  - python >=3.11
+  - numpy >=1.25.2
+  - pip >=23.3.1
+  - hpc >=0.1.3
+  - pyramids >=0.5.1
+  - PyYAML >=6.0.1
+  - gdal >=3.7.0
+  - pandas >=2.1.0
+  - geopandas >=0.14.1
+  - cleopatra >=0.4.0
+  - matplotlib >=3.7.2
+  - statista >=0.5.0
+  - scipy >=1.11.4
+  - serapeum_utils >=0.2.0
+  - loguru >=0.7.2
+  - joblib >=1.3.2
   - pathlib >=1.0.1
-  - gdal >=3.5.3
-  - pandas >=1.4.4
-  - geopandas >=0.12.2
-  - matplotlib >=3.6.3
-  - scipy >=1.9.1
-  - statsmodels >=0.13.2
-  - rasterio >=1.3.2
-  - rasterstats >=0.17.0
-#  - statista >=0.3.0
-  - pyramids >=0.4.0
+  - pytest >=7.4.3
+  - pytest-cov >=4.1.0
+  - requests >=2.31.0
+  - statsmodels >=0.14.1
+  - rasterio >=1.3.9
+  - rasterstats >=0.19.0
   - Oasis >=1.0.2
-  - cleopatra >=0.2.7
-  - digitalearth >=0.1.11
-  - serapeum_utils >=0.1.1
-  - joblib >=1.2.0
-  - loguru >=0.6.0
-  - requests >=2.28.1
-  - pytest
-  - pytest-cov
