--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,13 @@
-black >=22.12.0
+black >=23.11.0
 darglint >=1.8.1
+flake8 >=6.1.0
 flake8-bandit >=4.1.1
-flake8-bugbear >=23.1.20
+flake8-bugbear >=23.9.16
 flake8-docstrings >=1.7.0
 flake8-rst-docstrings >=0.3.0
 pep8-naming >=0.13.3
-pre-commit >=3.0.3
-pre-commit-hooks >=4.4.0
-pytest >=7.2.1
-pytest-cov ==4.0.0
-reorder-python-imports >=3.9.0
+pre-commit >=3.5.0
+pre-commit-hooks >=4.5.0
+pytest >=7.4.3
+pytest-cov >= 4.1.0
+reorder-python-imports >=3.12.0
