--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-# cleopatra >=0.2.7
-digitalearth >=0.1.11
-gdal >=3.5.3
-geopandas >=0.12.2
-hpc-utils >=0.1.0
-joblib >=1.2.0
-loguru >=0.6.0
-matplotlib >=3.7.0
-numpy >=1.24.2
-Oasis-Optimization >=1.0.2
-pandas >=1.4.4
+cleopatra >=0.4.0
+gdal >=3.7.0
+geopandas >=0.14.1
+hpc >=0.1.3
+joblib >=1.3.2
+loguru >=0.7.2
+matplotlib >=3.7.2
+numpy >=1.25.2
+Oasis >=1.0.2
+pandas >=2.1.0
 pathlib >=1.0.1
-pip >=22.3.1
-pyramids-gis >=0.4.0
-PyYAML >=0.6.0
-rasterio >=1.3.2
-rasterstats >=0.17.0
-requests >=2.28.1
-scipy >=1.9.1
-serapeum_utils >=0.1.1
-statista >=0.3.0
-statsmodels >=0.13.2
+pip >=23.3.1
+pyramids >=0.5.1
+pytest >=7.4.3
+pytest-cov >=4.1.0
+PyYAML >=6.0.1
+rasterio >=1.3.9
+rasterstats >=0.19.0
+requests >=2.31.0
+scipy >=1.11.4
+serapeum_utils >=0.2.0
+statista >=0.5.0
+statsmodels >=0.14.1
