--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ joblib >=1.3.2
 loguru >=0.7.2
 matplotlib >=3.7.2
 numpy >=1.25.2
-Oasis >=1.0.2
+Oasis-Optimization >=1.0.2
 pandas >=2.1.0
 pathlib >=1.0.1
 pip >=23.3.1
