--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Oasis-Optimization >=1.0.2
 pandas >=2.1.0
 pathlib >=1.0.1
 pip >=23.3.1
-pyramids >=0.5.1
+pyramids-gis >=0.5.1
 pytest >=7.4.3
 pytest-cov >=4.1.0
 PyYAML >=6.0.1
