--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,6 @@ rasterio >=1.3.9
 rasterstats >=0.19.0
 requests >=2.31.0
 scipy >=1.11.4
-serapeum_utils >=0.2.0
+serapeum_utils ==0.2.0
 statista >=0.5.0
 statsmodels >=0.14.1
