--- a/.github/workflows/pypi-deployment.yml
+++ b/.github/workflows/pypi-deployment.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install --no-cache-dir Cython
-            pip install --find-links=https://girder.github.io/large_image_wheels --no-cache GDAL<3.8.4
+            pip install --find-links=https://girder.github.io/large_image_wheels --no-cache GDAL==3.8.4
 
       - name: Test GDAL installation
         run: |
