--- a/.github/workflows/conda-deployment.yml
+++ b/.github/workflows/conda-deployment.yml
@@ -8,35 +8,30 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.11"]
+        python-version: ["3.12"]
     env:
       OS: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: actions/checkout@v4
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           mamba-version: "*"
-          #use-mamba: true
+          use-mamba: true
           auto-update-conda: false
-          environment-file: environment.yml
           auto-activate-base: false
+          environment-file: environment.yml
           activate-environment: test
           python-version: ${{ matrix.python-version }}
-          channels: conda-forge,defaults
+          channels: conda-forge
           channel-priority: true
           show-channel-urls: true
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
 
       - name: Install dev-dependencies
         run: |
-            python -m pip install -r requirements-dev.txt
+            pip install .[dev,test]
 
-      - name: Generate coverage report
+      - name: Run tests
         shell: bash -el {0}
         run: |
           conda info
