--- a/.github/workflows/pypi-deployment.yml
+++ b/.github/workflows/pypi-deployment.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.11"]
+        python-version: ["3.12"]
     env:
       OS: ${{ matrix.os }}
 
@@ -24,7 +24,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install --no-cache-dir Cython
-            pip install --find-links=https://girder.github.io/large_image_wheels --no-cache GDAL==3.8.4
+            pip install --find-links=https://girder.github.io/large_image_wheels --no-cache GDAL==3.10.0
 
       - name: Test GDAL installation
         run: |
@@ -33,15 +33,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-            pip install -r requirements.txt -r requirements-dev.txt
-            python setup.py install
+            pip install .[dev,test]
 
-      - name: Generate coverage report
+      - name: Run Tests
         run: |
-          conda info
-          conda config --show-sources
-          conda config --show
-          python -m pytest -vvv --cov=Hapi --cov-report=xml
+          python -m pytest -vvv --cov=src/Hapi --cov-report=xml
 
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
