--- a/.github/workflows/conda-deployment.yml
+++ b/.github/workflows/conda-deployment.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dev-dependencies
         run: |
-            pip install .[dev,test] --no-deps
+            pip install .[test] --no-deps
 
       - name: Run tests
         shell: bash -el {0}
