--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - pip >=24.3.1
   - pyramids >=0.6.0
   - PyYAML >=6.0.2
-  - gdal >=3.10.0
+  - gdal ==3.10.0
   - pandas >=2.2.3
   - geopandas >=1.0.1
   - cleopatra >=0.4.0
