--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,8 @@ markers = [
     "plot: test plotting function optional package (deselect with '-m \"not plot\"')",
     "e2e: end-to-end test (deselect with '-m \"not e2e\"')",
     "mock: mock test (deselect with '-m \"not mock\"')",
-    "integration: mock test (deselect with '-m \"not integration\"')"
+    "integration: mock test (deselect with '-m \"not integration\"')",
+    "fig_share: mock test (deselect with '-m \"not fig_share\"')"
 ]
 
 
