--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -125,5 +125,6 @@ repos:
       - id: doctest
         name: doctest
         entry: pytest --doctest-modules
+        args: ["--doctest-glob=*.rst", "-o", "doctest_optionflags=NORMALIZE_WHITESPACE ELLIPSIS"]
         language: system
         files: ^src/.*\.py$
