--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,15 +5,17 @@
 # Required
 version: 2
 
-conda:
-  environment: docs/environment.yml
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-#Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
 
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "mambaforge-22.9"
+
+conda:
+  environment: docs/environment.yml
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
